--- a/book.toml
+++ b/book.toml
@@ -7,3 +7,14 @@ title = "Start9 Documentation"
 
 [build]
 build-dir = "docs"
+
+[preprocessor]
+
+[preprocessor.admonish]
+command = "mdbook-admonish"
+assets_version = "3.0.2" # do not edit: managed by `mdbook-admonish install`
+
+[output]
+
+[output.html]
+additional-css = ["./theme/mdbook-admonish.css"]
