--- a/book.toml
+++ b/book.toml
@@ -17,5 +17,6 @@ assets_version = "3.0.2" # do not edit: managed by `mdbook-admonish install`
 [output]
 
 [output.html]
-theme = "ayu"
+default-theme = "ayu"
+preferred-dark-theme = "ayu"
 additional-css = ["./theme/mdbook-admonish.css"]
